<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.bankit.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_analytics"
        android:name="com.capstone.bankit.ui.main.analytics.AnalyticsFragment"
        android:label="@string/title_analytics"
        tools:layout="@layout/fragment_analytics" />

    <fragment
        android:id="@+id/navigation_chatbot"
        android:name="com.capstone.bankit.ui.main.chatbot.ChatbotFragment"
        android:label="@string/title_chatbot"
        tools:layout="@layout/fragment_chatbot" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.bankit.ui.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>