<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.expense.ExpenseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_expense"
                android:textAlignment="center"
                android:textColor="@color/primaryGray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/btn_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_back" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/tv_title"
                app:layout_constraintTop_toTopOf="@id/tv_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_title"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:contentDescription="@string/app_name"
                android:padding="12dp"
                android:src="@drawable/ic_back_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/ed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/background_form"
            android:hint="@string/title"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp" />

        <EditText
            android:id="@+id/ed_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_form"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/date"
            android:inputType="none"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp" />

        <EditText
            android:id="@+id/ed_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_form"
            android:hint="@string/amount"
            android:inputType="number"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_form"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp" />


        <EditText
            android:id="@+id/ed_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_form"
            android:hint="@string/note"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp" />

        <EditText
            android:id="@+id/ed_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_form"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_cam"
            android:focusable="false"
            android:hint="@string/receipt"
            android:inputType="none"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_receipt"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="18dp"
            android:visibility="gone"
            app:cardBackgroundColor="@android:color/darker_gray">

            <ImageView
                android:id="@+id/iv_receipt"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_auto_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:text="@string/auto_save"
            android:textColor="@color/primaryBlue"
            app:cornerRadius="6dp"
            app:strokeColor="@color/primaryBlue"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:backgroundTint="@color/primaryBlue"
            android:text="@string/manual_save"
            app:cornerRadius="6dp" />


    </LinearLayout>

</ScrollView>